kuber/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-upload-prefix
spec:
  stripPrefix:
    prefixes:
      - /upload
